<resources>
    <string name="app_name">TeMaNesia</string>
    <string name="title_home">Home</string>
    <string name="title_profile">Profile</string>
    <string name="title_discuss">Discuss</string>
    <string name="title_discover">Discover</string>

    <string name="title_email">Email</string>
    <string name="title_password">Kata sandi</string>
    <string name="title_konfirmasi_password">Konfirmasi Kata Sandi</string>

    <string name="title_nim_nisn">NIM / NISN</string>
    <string name="title_kampus_sekolah">Kampus / Sekolah</string>
    <string name="title_nama_lengkap">Nama Lengkap</string>
    <string name="title_nik">NIK</string>
    <string name="title_alamat_lengkap">Alamat Lengkap</string>


    <string name="text_welcome">Selamat Datang 👋</string>
    <string name="text_welcome_description">Silahkan masuk menggunakan akun anda untuk \nmenggunakan Aplikasi.</string>
    <string name="text_welcome_register">Buat Akun Baru 🔥</string>
    <string name="text_welcome_register_description">Silahkan ini form dibawah ini dengan lengkap dan sesuaikan dengan data Anda.</string>


    <string name="text_sudah_mendaftar">Sudah punya akun?</string>
    <string name="text_belum_mendaftar">Belum punya akun?</string>

    <string name="text_masuk_disini">Masuk Disini</string>
    <string name="text_daftar_disini">Daftar Disini</string>

    <string name="btn_text_login">Login</string>
    <string name="btn_text_Register">Register</string>
    <string name="title_kode_password">Kode Konfirmasi\n</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_notification">Notification</string>
    <string name="search">Cari Apapun Disini</string>
    <string name="iv_hero">Hero Image Home</string>
    <string name="text_features">Feature</string>
    <string name="text_lembaga">Lembaga</string>
    <string name="title_feature">National CAD-CAM Competition 2022</string>
    <string name="title_feature_description">Kompetisi CAD-CAM guna meningkatkan keterampilan Mahasiswa Tingkat Nasional</string>
    <string name="title_tanggal">10 November 2023</string>
    <string name="text_features_image">features image</string>
    <string name="upvote_desc">Button Upvote</string>
    <string name="downVote_desc">Downvote Button</string>
    <string name="text_count_upvote">4.2k</string>
    <string name="title_lomba">Lomba</string>
    <string name="title_sertifikat">Sertifikat</string>
    <string name="title_beasiswa">Beasiswa</string>
    <string name="title_lowongan">Lowongan</string>
    <string name="title_penyelenggara">Penyelenggara</string>
    <string name="title_description">Deskripsi</string>
    <string name="desc_edit_profile">Button Edit Profile</string>
    <string name="desc_profile_settings">Setting Profile</string>
    <string name="title_tentang_saya">Tentang Saya</string>

    <string name="lorem">Lorem ipsum dolor sit amet consectetur adipiscing elit Ut et massa mi. Aliquam in hendrerit urna. Pellentesque sit amet sapien fringilla, mattis ligula consectetur, ultrices mauris.</string>
    <string name="title_pengalaman_kerja">Pengalaman Kerja</string>
    <string name="content_dest_pengalaman_kerja">Button Plus Pengalaman Kerja</string>
    <string name="title_pendidikan">Pendidikan</string>
    <string name="btn_buat_cv">Buat CV</string>
    <string name="btn_buat_cover_letter">Buat Cover Letter</string>
    <string name="title_organisasi">Organisasi</string>
    <string name="lorem_ipsum_12_words">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor</string>
    <string name="lorem_ipsum_32_words">etiam erat velit scelerisque in dictum non consectetur a erat nam at lectus urna duis convallis convallis tellus id interdum velit laoreet id donec ultrices tincidunt arcu non sodales neque sodales ut</string>
    <string name="title_rekomendasi_beasiswa">Rekomendasi Beasiswa</string>
    <string name="iv_desc_goto_beasiswa">Goto Beasiswa</string>
    <string name="deskripsi_dokumen">Buku Pedoman Kompetisi Mahasiswa Bidang Informatika Politeknik Nasional</string>
    <string name="title_jurusan">Jurusan</string>
    <string name="title_sertifikasi">Yuk Sertifikasi Disini</string>
    <string name="title_lowongan_home">Lowongan Cocok Untukmu</string>
    <string name="title_lomba_home">Lomba Untukmu</string>
    <string name="title_last_minute_discover">Last Minute Registration</string>
    <string name="title_fyp_discover">Khusus Hanya Untukmu</string>
    <string name="text_loading_placeholder">...</string>

    <string-array name="indonesian_months">
        <item></item>
        <item>Januari</item>
        <item>Februari</item>
        <item>Maret</item>
        <item>April</item>
        <item>Mei</item>
        <item>Juni</item>
        <item>Juli</item>
        <item>Agustus</item>
        <item>September</item>
        <item>Oktober</item>
        <item>November</item>
        <item>Desember</item>
    </string-array>
</resources>