<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    app:cardCornerRadius="@dimen/radius_small"
    app:cardPreventCornerOverlap="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/component_card_blue_border">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/iv_features"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/mask_group"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.App.CornerSize10Percent" />

        <TextView
            android:id="@+id/tv_pill_features"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/component_pill_blue_bg"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/text_features"
            android:textColor="@color/blue100"
            android:textSize="@dimen/font_size_small"

            app:layout_constraintStart_toEndOf="@+id/iv_features"
            app:layout_constraintTop_toTopOf="@+id/iv_features" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/component_pill_gray_bg"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/text_lembaga"
            android:textSize="@dimen/font_size_small"
            app:layout_constraintStart_toEndOf="@+id/tv_pill_features"
            app:layout_constraintTop_toTopOf="@+id/tv_pill_features" />

        <TextView
            android:id="@+id/tv_features_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_bold"
            android:text="@string/title_feature"
            android:textSize="@dimen/font_size_medium"
            app:layout_constraintStart_toStartOf="@+id/tv_pill_features"
            app:layout_constraintTop_toBottomOf="@+id/tv_pill_features" />

        <TextView
            android:id="@+id/tv_features_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/title_feature_description"
            android:textSize="@dimen/font_size_small"
            app:layout_constraintStart_toStartOf="@+id/tv_pill_features"
            app:layout_constraintTop_toBottomOf="@+id/tv_features_title" />

        <ImageView
            android:id="@+id/iv_feature"
            android:contentDescription="@string/text_features_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_calender"
            app:layout_constraintBottom_toBottomOf="@+id/iv_features"
            app:layout_constraintStart_toStartOf="@+id/tv_pill_features"
            app:layout_constraintTop_toBottomOf="@+id/tv_features_description" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/title_tanggal"
            android:textColor="@color/dark_gray"
            android:textSize="@dimen/font_size_small"
            app:layout_constraintBottom_toBottomOf="@+id/iv_feature"
            app:layout_constraintStart_toEndOf="@+id/iv_feature"
            app:layout_constraintTop_toTopOf="@+id/iv_feature" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</com.google.android.material.card.MaterialCardView>