<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/medium_gap">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/iv_features"
        android:layout_width="75dp"
        android:layout_height="90dp"
        android:background="#B3B3B3"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.App.CornerSize10Percent" />

    <TextView
        android:id="@+id/tv_pill_features"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/medium_gap"
        android:background="#B3B3B3"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/text_features"
        android:textColor="#B3B3B3"
        android:textSize="@dimen/font_size_small"

        app:layout_constraintStart_toEndOf="@+id/iv_features"
        app:layout_constraintTop_toTopOf="@+id/iv_features" />

    <TextView
        android:id="@+id/tv_pill_lembaga"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/medium_gap"
        android:background="#B3B3B3"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/text_lembaga"
        android:textColor="#B3B3B3"
        android:textSize="@dimen/font_size_small"
        app:layout_constraintStart_toEndOf="@+id/tv_pill_features"
        app:layout_constraintTop_toTopOf="@+id/tv_pill_features" />

    <TextView
        android:id="@+id/tv_features_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/small_gap"
        android:background="#B3B3B3"
        android:ellipsize="end"
        android:fontFamily="@font/montserrat_bold"
        android:maxLines="1"
        android:text="@string/title_feature"
        android:textColor="#B3B3B3"
        android:textSize="@dimen/font_size_medium"
        app:layout_constraintStart_toStartOf="@+id/tv_pill_features"
        app:layout_constraintTop_toBottomOf="@+id/tv_pill_features" />

    <TextView
        android:id="@+id/tv_features_description_singkat"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="#B3B3B3"
        android:ellipsize="end"
        android:fontFamily="@font/poppins_medium"
        android:maxLines="1"
        android:text="@string/title_feature_description"
        android:textColor="#B3B3B3"
        android:textSize="@dimen/font_size_small"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/tv_pill_features"
        app:layout_constraintTop_toBottomOf="@+id/tv_features_title" />

    <ImageView
        android:id="@+id/ic_date"
        android:layout_width="18dp"
        android:layout_height="18dp"
        android:background="#B3B3B3"
        android:contentDescription="@string/text_features_image"
        app:layout_constraintBottom_toBottomOf="@id/iv_features"
        app:layout_constraintStart_toStartOf="@id/tv_pill_features"
        app:layout_constraintTop_toBottomOf="@id/tv_features_description_singkat" />

    <TextView
        android:id="@+id/tv_date"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="#B3B3B3"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/title_tanggal"
        android:textColor="#B3B3B3"
        android:textSize="@dimen/font_size_small"
        app:layout_constraintBottom_toBottomOf="@+id/ic_date"
        app:layout_constraintEnd_toEndOf="@id/tv_features_description_singkat"
        app:layout_constraintStart_toEndOf="@+id/ic_date"
        app:layout_constraintTop_toTopOf="@+id/ic_date" />
</androidx.constraintlayout.widget.ConstraintLayout>