<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/iv_avatar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/activity_vertical_margin"
        android:minWidth="50dp"
        android:minHeight="50dp"
        android:src="@drawable/raw_profile"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/activity_vertical_margin"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/title_nama_lengkap"
        android:textColor="@color/black"
        android:textSize="@dimen/font_size_medium"
        app:layout_constraintBottom_toTopOf="@id/tv_jurusan"
        app:layout_constraintStart_toEndOf="@id/iv_avatar"
        app:layout_constraintTop_toTopOf="@id/iv_avatar" />

    <TextView
        android:id="@+id/tv_jurusan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/title_kampus_sekolah"
        android:textSize="@dimen/font_size_small"
        app:layout_constraintBottom_toBottomOf="@id/iv_avatar"
        app:layout_constraintStart_toStartOf="@+id/tv_username"
        app:layout_constraintTop_toBottomOf="@id/tv_username" />

    <ImageView
        android:id="@+id/iv_bell"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/activity_vertical_margin"
        android:contentDescription="@string/title_notification"
        android:src="@drawable/ic_bell"
        app:layout_constraintBottom_toBottomOf="@id/iv_avatar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/iv_avatar" />

    <androidx.appcompat.widget.SearchView
        android:id="@+id/search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:background="@drawable/component_search__bg"
        android:layoutDirection="rtl"
        android:textCursorDrawable="@null"
        app:iconifiedByDefault="false"
        app:layout_constraintEnd_toEndOf="@id/iv_bell"
        app:layout_constraintStart_toStartOf="@id/iv_avatar"
        app:layout_constraintTop_toBottomOf="@id/iv_avatar"
        app:queryBackground="@null"
        app:queryHint="@string/search"
        app:searchIcon="@drawable/ic_search"
        app:showDividers="end" />
</androidx.constraintlayout.widget.ConstraintLayout>