<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/iv_avatar_bg"
        android:layout_width="match_parent"
        android:layout_height="@dimen/profile_bg_height"
        android:background="@drawable/component_pill_blue_bg"
        android:contentDescription="@string/title_profile"
        android:scaleType="centerCrop"
        android:src="@drawable/bg_profile"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/iv_avatar"
        android:layout_width="@dimen/profile_picture_size"
        android:layout_height="@dimen/profile_picture_size"
        android:src="@drawable/raw_profile"
        app:layout_constraintBottom_toBottomOf="@id/iv_avatar_bg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_avatar_bg"
        app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.App.CornerSize50Percent" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/ic_profile_edit_container"
        android:layout_width="@dimen/profile_pill_size"
        android:layout_height="@dimen/profile_pill_size"
        android:layout_marginStart="@dimen/activity_margin"
        android:clickable="true"
        android:focusable="true"
        app:cardBackgroundColor="@color/blue30"
        app:layout_constraintBottom_toBottomOf="@id/iv_avatar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_avatar">

        <ImageView
            android:id="@+id/ic_profile_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:contentDescription="@string/desc_edit_profile"
            android:src="@drawable/ic_profile_edit" />

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/ic_profile_setting_container"
        android:layout_width="@dimen/profile_pill_size"
        android:layout_height="@dimen/profile_pill_size"
        android:layout_marginEnd="@dimen/activity_margin"
        android:clickable="true"
        android:focusable="true"
        app:cardBackgroundColor="@color/blue30"
        app:layout_constraintBottom_toBottomOf="@id/iv_avatar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_avatar">

        <ImageView
            android:id="@+id/ic_profile_setting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:contentDescription="@string/desc_profile_settings"
            android:src="@drawable/ic_settings" />

    </com.google.android.material.card.MaterialCardView>

    <TextView
        android:id="@+id/tv_nama_lengkap"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/title_nama_lengkap"
        android:textSize="@dimen/font_size_medium"
        app:layout_constraintBottom_toBottomOf="@id/ic_profile_edit_container"
        app:layout_constraintEnd_toStartOf="@id/ic_profile_setting_container"
        app:layout_constraintStart_toEndOf="@id/ic_profile_edit_container"
        app:layout_constraintTop_toBottomOf="@id/ic_profile_edit_container" />

    <TextView
        android:id="@+id/tv_jurusan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/title_kampus_sekolah"
        app:layout_constraintEnd_toEndOf="@id/tv_nama_lengkap"
        app:layout_constraintStart_toStartOf="@id/tv_nama_lengkap"
        app:layout_constraintTop_toBottomOf="@id/tv_nama_lengkap" />
</androidx.constraintlayout.widget.ConstraintLayout>